--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,12 @@
 
     <groupId>org.example</groupId>
     <artifactId>Java_basic</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>mianshi</module>
+        <module>basic</module>
+    </modules>
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
@@ -24,6 +29,11 @@
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
             <version>2.6</version>
+        </dependency>
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.2.3</version>
         </dependency>
     </dependencies>
 
