--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>mianshi</module>
         <module>basic</module>
+        <module>mashibing</module>
     </modules>
     <dependencies>
         <dependency>
